Added update for octopart
