# kipartbase/swagger_server/models/part.py
@@ -22,7 +22,7 @@ class Part(BaseModel):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name=None, description=None, comment=None, octopart=None, updated=None, id=None, category=None, has_childs=None, childs=None, footprint=None, model=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None):
+    def __init__(self, name=None, description=None, comment=None, octopart=None, octopart_uid=None, updated=None, id=None, category=None, has_childs=None, childs=None, footprint=None, model=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None):
         """
         Part - a model defined in Swagger
 
@@ -34,6 +34,8 @@ class Part(BaseModel):
         :type comment: str
         :param octopart: The octopart of this Part.
         :type octopart: str
+        :param octopart_uid: The octopart_uid of this Part.
+        :type octopart_uid: str
         :param updated: The updated of this Part.
         :type updated: datetime
         :param id: The id of this Part.
@@ -64,6 +66,7 @@ class Part(BaseModel):
             'description': str,
             'comment': str,
             'octopart': str,
+            'octopart_uid': str,
             'updated': datetime,
             'id': int,
             'category': PartCategory,
@@ -83,6 +86,7 @@ class Part(BaseModel):
             'description': 'description',
             'comment': 'comment',
             'octopart': 'octopart',
+            'octopart_uid': 'octopart_uid',
             'updated': 'updated',
             'id': 'id',
             'category': 'category',
@@ -101,6 +105,7 @@ class Part(BaseModel):
         self._description = description
         self._comment = comment
         self._octopart = octopart
+        self._octopart_uid = octopart_uid
         self._updated = updated
         self._id = id
         self._category = category
@@ -209,6 +214,27 @@ class Part(BaseModel):
         """
 
         self._octopart = octopart
+
+    @property
+    def octopart_uid(self):
+        """
+        Gets the octopart_uid of this Part.
+
+        :return: The octopart_uid of this Part.
+        :rtype: str
+        """
+        return self._octopart_uid
+
+    @octopart_uid.setter
+    def octopart_uid(self, octopart_uid):
+        """
+        Sets the octopart_uid of this Part.
+
+        :param octopart_uid: The octopart_uid of this Part.
+        :type octopart_uid: str
+        """
+
+        self._octopart_uid = octopart_uid
 
     @property
     def updated(self):
