# kipartbase/swagger_server/models/part_data.py
@@ -12,7 +12,7 @@ class PartData(BaseModel):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name=None, description=None, comment=None, octopart=None, updated=None):
+    def __init__(self, name=None, description=None, comment=None, octopart=None, octopart_uid=None, updated=None):
         """
         PartData - a model defined in Swagger
 
@@ -24,6 +24,8 @@ class PartData(BaseModel):
         :type comment: str
         :param octopart: The octopart of this PartData.
         :type octopart: str
+        :param octopart_uid: The octopart_uid of this PartData.
+        :type octopart_uid: str
         :param updated: The updated of this PartData.
         :type updated: datetime
         """
@@ -32,6 +34,7 @@ class PartData(BaseModel):
             'description': str,
             'comment': str,
             'octopart': str,
+            'octopart_uid': str,
             'updated': datetime
         }
 
@@ -40,6 +43,7 @@ class PartData(BaseModel):
             'description': 'description',
             'comment': 'comment',
             'octopart': 'octopart',
+            'octopart_uid': 'octopart_uid',
             'updated': 'updated'
         }
 
@@ -47,6 +51,7 @@ class PartData(BaseModel):
         self._description = description
         self._comment = comment
         self._octopart = octopart
+        self._octopart_uid = octopart_uid
         self._updated = updated
 
     @classmethod
@@ -144,6 +149,27 @@ class PartData(BaseModel):
         """
 
         self._octopart = octopart
+
+    @property
+    def octopart_uid(self):
+        """
+        Gets the octopart_uid of this PartData.
+
+        :return: The octopart_uid of this PartData.
+        :rtype: str
+        """
+        return self._octopart_uid
+
+    @octopart_uid.setter
+    def octopart_uid(self, octopart_uid):
+        """
+        Sets the octopart_uid of this PartData.
+
+        :param octopart_uid: The octopart_uid of this PartData.
+        :type octopart_uid: str
+        """
+
+        self._octopart_uid = octopart_uid
 
     @property
     def updated(self):
