# kipartbase/swagger_server/models/part_new.py
@@ -22,7 +22,7 @@ class PartNew(BaseModel):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name=None, description=None, comment=None, octopart=None, updated=None, category=None, childs=None, footprint=None, model=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None):
+    def __init__(self, name=None, description=None, comment=None, octopart=None, octopart_uid=None, updated=None, category=None, childs=None, footprint=None, model=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None):
         """
         PartNew - a model defined in Swagger
 
@@ -34,6 +34,8 @@ class PartNew(BaseModel):
         :type comment: str
         :param octopart: The octopart of this PartNew.
         :type octopart: str
+        :param octopart_uid: The octopart_uid of this PartNew.
+        :type octopart_uid: str
         :param updated: The updated of this PartNew.
         :type updated: datetime
         :param category: The category of this PartNew.
@@ -60,6 +62,7 @@ class PartNew(BaseModel):
             'description': str,
             'comment': str,
             'octopart': str,
+            'octopart_uid': str,
             'updated': datetime,
             'category': PartCategoryRef,
             'childs': List[PartRef],
@@ -77,6 +80,7 @@ class PartNew(BaseModel):
             'description': 'description',
             'comment': 'comment',
             'octopart': 'octopart',
+            'octopart_uid': 'octopart_uid',
             'updated': 'updated',
             'category': 'category',
             'childs': 'childs',
@@ -93,6 +97,7 @@ class PartNew(BaseModel):
         self._description = description
         self._comment = comment
         self._octopart = octopart
+        self._octopart_uid = octopart_uid
         self._updated = updated
         self._category = category
         self._childs = childs
@@ -199,6 +204,27 @@ class PartNew(BaseModel):
         """
 
         self._octopart = octopart
+
+    @property
+    def octopart_uid(self):
+        """
+        Gets the octopart_uid of this PartNew.
+
+        :return: The octopart_uid of this PartNew.
+        :rtype: str
+        """
+        return self._octopart_uid
+
+    @octopart_uid.setter
+    def octopart_uid(self, octopart_uid):
+        """
+        Sets the octopart_uid of this PartNew.
+
+        :param octopart_uid: The octopart_uid of this PartNew.
+        :type octopart_uid: str
+        """
+
+        self._octopart_uid = octopart_uid
 
     @property
     def updated(self):
